// Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//Example of topology
syntax = "proto3";
package topology;

import "google/protobuf/empty.proto";

service TopologyService {
  rpc GetTopology (google.protobuf.Empty) returns (Topology) {}
}


message Link {
  string link_id = 1;
  string source_node = 2;
  string target_node = 3;
  string source_port = 4;
  string target_port = 5;
}

message Node {
  string node_id = 1;
  repeated Port port = 2;
}

message Port {
  string port_id = 1;
  enum LayerProtocolName {
    ETH = 0;
    OPTICAL = 1;
  }
  LayerProtocolName layerProtocolName = 2;
}

message Topology {
  repeated Node node = 1;
  repeated Link link = 2;
}

